Fix build with merged applications